Archive2/4b/307cbf8e876540/output
main.cpp:13:36: error: unused parameter 'f' [-Werror,-Wunused-parameter]
void operator+(in_call const&, F&& f) {
                                   ^
main.cpp:24:2: error: expected ';' after expression
} IN {
 ^
 ;
main.cpp:24:3: error: use of undeclared identifier 'IN'
} IN {
  ^
main.cpp:32:2: error: expected '}'
}
 ^
main.cpp:22:1: note: to match this '{'
REQUIRE {
^
main.cpp:17:17: note: expanded from macro 'REQUIRE'
#define REQUIRE { precondition_call() + [&]
                ^
4 errors generated.
